--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </head>
     <body>
 
+      <div class="background"></div>
+
       <main class="container">
 
         <header class="header-container">
